--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" onclick="jump()">
+<html lang="en" onkeydown="jump()">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,6 +22,7 @@
 
     <div class="container">
         <div class="counter"><span id ="scoreSpan"></span></div>
+        <div class="highscore"><span id ="highscore">0</span></div>
         <div id="game">
             <div id="character"></div>
             <div id="block"></div>
