--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>T1les</title>
+    <title>Pirasmer</title>
     <link rel="stylesheet" href="css/main.css">
     <header>
         <nav>
@@ -17,7 +17,7 @@
 </head>
 <body>
 
-    <div class="title">T1les</div>
+    <div class="title">Pirasmer</div>
 
     <div class="container">
         <form method="post" action="/">
@@ -42,7 +42,7 @@
                 <img src="images\jewcat1.jpg" class = "projimage" alt="Avatar" style="width:80%">
             </div>
         <div class="project_links">
-            <a href="https://github.com/t1les" class="button_links" target=”_blank”>Github</a>
+            <a href="https://github.com/p1r4sm3r" class="button_links" target=”_blank”>Github</a>
         </div>
     </div>
 
@@ -54,7 +54,7 @@
                 <img src="images\jewcat1.jpg" class = "projimage" alt="Avatar" style="width:80%">
             </div>
         <div class="project_links">
-            <a href="https://github.com/t1les" class="button_links" target=”_blank”>Github</a>
+            <a href="https://github.com/p1r4sm3r" class="button_links" target=”_blank”>Github</a>
         </div>
     </div>
 
