--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p>filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler </p>
         <button class="button-13" role="button">Github</button>
             <div class="project">
-                <img src="images\pirasmer.jpg" class = "projimage" alt="Avatar" style="width:80%">
+                <img src="images\pirasmer.png" class = "projimage" alt="Avatar" style="width:80%">
             </div>
         <div class="project_links">
             <a href="https://github.com/p1r4sm3r" class="button_links" target=”_blank”>Github</a>
@@ -51,7 +51,7 @@
         <p>filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler filler </p>
         <button class="button-13" role="button">Github</button>
             <div class="project">
-                <img src="images\pirasmer.jpg" class = "projimage" alt="Avatar" style="width:80%">
+                <img src="images\pirasmer.png" class = "projimage" alt="Avatar" style="width:80%">
             </div>
         <div class="project_links">
             <a href="https://github.com/p1r4sm3r" class="button_links" target=”_blank”>Github</a>
