--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <input id="scores" type="hidden" name="scores" value=""/>
         <button class = 'button button1' style = "position:relative; left:10px;">Add</button>
         </form>
-
-        <div class="counter"><span id ="scoreSpan"></span></div>
+        <div id ="pause"></div>
+        <div class="counter"><span id ="scoreSpan">0</span></div>
         <div class="highscore"><span id ="highscore">0</span></div>
         <div id="game">
             <div id="character"></div>
