--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <div class="counter"><span id ="scoreSpan">0</span></div>
         <div class="highscore"id="algorithms"><span id ="highscore">0</span></div>
         <div id="game">
-            <div id="character"></div>
-            <div id="block"></div>
+            <div id="character"><img id="sprite" src="images/dinoidle.png" alt="Error"></div>
+            <div id="block"><img src="images/spike.png" alt="Error"></div>
         </div>
     </div>
 
